# SnowboyMRHA

./: .gitignore  Dockerfile  README.md
examples/C++/: Makefile  demo3.cc
examples/C++/gstreamer/gst-snowboy/: README.md  meson.build
examples/C++/gstreamer/gst-snowboy/gst-plugin/: AUTHORS  ChangeLog  meson.build
examples/C++/gstreamer/gst-snowboy/gst-plugin/src/: gstsnowboy.cc  snowboy-detect.h
examples/Python/: generate_pmdl.py  requirements.txt  snowboy_model_config.py
examples/Python/pmdl/: snowboy_pmdl.py
examples/Python3/: gst-app.py
lib/: snowboy_model.py
